admin/01_namespace.yaml
---
# namespace-admin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: admin
  labels:
    shared-gateway-access: "true"
